fix footer z-index

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -636,6 +636,10 @@ video {
   top: 4rem;
 }
 
+.top-14 {
+  top: 3.5rem;
+}
+
 .z-\[999\] {
   z-index: 999;
 }
@@ -1776,6 +1780,11 @@ video {
   background-color: rgb(255 229 0 / var(--tw-bg-opacity));
 }
 
+.before\:duration-200::before {
+  content: var(--tw-content);
+  transition-duration: 200ms;
+}
+
 .hover\:translate-y-0:hover {
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1894,6 +1903,18 @@ video {
 .hover\:text-\[\#FFE500\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 229 0 / var(--tw-text-opacity));
+}
+
+.before\:hover\:skew-y-3:hover::before {
+  content: var(--tw-content);
+  --tw-skew-y: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:hover\:bg-black:hover::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 @media (prefers-color-scheme: dark) {
